force-app/main/default/objects/ANZARD_Data__c/fields/ABN_LESS__c.field-meta.xml
<CustomField>
    <fullName>ABN_LESS__c</fullName>
    <label>ABN_LESS</label>
    <type>TextArea</type>
</CustomField>