force-app/main/default/objects/ANZARD_Data__c/fields/ANZARD_UNIT__c.field-meta.xml
<CustomField>
    <fullName>ANZARD_UNIT__c</fullName>
    <defaultValue>(&quot;201&quot;)</defaultValue>
    <label>ANZARD_UNIT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>