force-app/main/default/objects/ANZARD_Data__c/fields/ART_REASON__c.field-meta.xml
<CustomField>
    <fullName>ART_REASON__c</fullName>
    <formula>IF(
    PARENT_SEX__c = &quot;1&quot;,
    IF(
        NOT(ISBLANK(TEXT(CYCLE_ID__r.Contact.Is_Treatment_Unrelated_to_Infertility__c))),
        LEFT(TEXT(CYCLE_ID__r.Contact.Is_Treatment_Unrelated_to_Infertility__c), 1),
        IF(
            NOT(ISBLANK(TEXT(CYCLE_ID__r.ART_REASON__c))),
            MID(TEXT(CYCLE_ID__r.ART_REASON__c), 5, 1),
            &quot;n&quot;
        )
    ),
    NULL
)</formula>
    <label>ART_REASON</label>
    <type>Text</type>
</CustomField>