force-app/main/default/objects/ANZARD_Data__c/fields/ART_UNIT__c.field-meta.xml
<CustomField>
    <fullName>ART_UNIT__c</fullName>
    <defaultValue>(&quot;263&quot;)</defaultValue>
    <label>ART_UNIT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>