force-app/main/default/objects/ANZARD_Data__c/fields/ASS_HATC__c.field-meta.xml
<CustomField>
    <fullName>ASS_HATC__c</fullName>
    <formula>IF( CYCLE_ID__r.Laser_Assisted_Hatching_Performed__c &gt;0, &quot;y&quot;,&quot;n&quot;)</formula>
    <label>ASS_HATC</label>
    <type>Text</type>
</CustomField>