force-app/main/default/objects/ANZARD_Data__c/fields/BAB1_ABN__c.field-meta.xml
<CustomField>
    <fullName>BAB1_ABN__c</fullName>
    <formula>IF(CYCLE_ID__r.BAB1_ABN__c=&quot;NO&quot;, NULL, CYCLE_ID__r.BAB1_ABN__c)</formula>
    <label>BAB1_ABN</label>
    <type>Text</type>
</CustomField>