force-app/main/default/objects/ANZARD_Data__c/fields/BAB1_NND__c.field-meta.xml
<CustomField>
    <fullName>BAB1_NND__c</fullName>
    <formula>IF(BAB1_OUT__c = &quot;n&quot;,  CYCLE_ID__r.BAB1_NND__c , NULL)</formula>
    <label>BAB1_NND</label>
    <type>Date</type>
</CustomField>