force-app/main/default/objects/ANZARD_Data__c/fields/BAB2_NND__c.field-meta.xml
<CustomField>
    <fullName>BAB2_NND__c</fullName>
    <formula>IF(BAB2_OUT__c = &quot;n&quot;,  CYCLE_ID__r.BAB2_NND__c , NULL)</formula>
    <label>BAB2_NND</label>
    <type>Date</type>
</CustomField>