force-app/main/default/objects/ANZARD_Data__c/fields/BAB2_OUT__c.field-meta.xml
<CustomField>
    <fullName>BAB2_OUT__c</fullName>
    <formula>LEFT( TEXT (CYCLE_ID__r.BAB2_OUT__c) ,1)</formula>
    <label>BAB2_OUT</label>
    <type>Text</type>
</CustomField>