force-app/main/default/objects/ANZARD_Data__c/fields/BAB3_ABN__c.field-meta.xml
<CustomField>
    <fullName>BAB3_ABN__c</fullName>
    <formula>IF(CYCLE_ID__r.BAB3_ABN__c=&quot;No&quot;, NULL, CYCLE_ID__r.BAB3_ABN__c)</formula>
    <label>BAB3_ABN</label>
    <type>Text</type>
</CustomField>