force-app/main/default/objects/ANZARD_Data__c/fields/BAB3_NND__c.field-meta.xml
<CustomField>
    <fullName>BAB3_NND__c</fullName>
    <formula>IF(BAB3_OUT__c = &quot;n&quot;,  CYCLE_ID__r.BAB3_NND__c , NULL)</formula>
    <label>BAB3_NND</label>
    <type>Date</type>
</CustomField>