force-app/main/default/objects/ANZARD_Data__c/fields/BAB3_WT__c.field-meta.xml
<CustomField>
    <fullName>BAB3_WT__c</fullName>
    <formula>IF( BAB3_OUT__c &lt;&gt;NULL,
IF(CYCLE_ID__r.BAB3_WT__c = NULL,9999,CYCLE_ID__r.BAB3_WT__c),NULL)</formula>
    <label>BAB3_WT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>