force-app/main/default/objects/ANZARD_Data__c/fields/CAN_DATE__c.field-meta.xml
<CustomField>
    <fullName>CAN_DATE__c</fullName>
    <formula>IF(OV_STIM__c = &quot;y&quot;, CYCLE_ID__r.CAN_DATE__c, NULL)</formula>
    <label>CAN_DATE</label>
    <type>Date</type>
</CustomField>