force-app/main/default/objects/ANZARD_Data__c/fields/CI_MALE__c.field-meta.xml
<CustomField>
    <fullName>CI_MALE__c</fullName>
    <formula>IF(
    (PARENT_SEX__c = &quot;2&quot; || PARENT_SEX__c = &quot;3&quot; || (PARENT_SEX__c = &quot;1&quot; &amp;&amp; CYCLE_TYPE__c = &quot;8&quot;)),
    NULL,
    IF(
        ART_REASON__c = &quot;Y&quot;,
        &quot;n&quot;,
        IF(
            ISBLANK(LEFT(TEXT( CYCLE_ID__r.Contact.Is_Infertility_Due_to_Male_Factors__c ), 1)),
            &quot;u&quot;,
            LEFT(TEXT(CYCLE_ID__r.Contact.Is_Infertility_Due_to_Male_Factors__c), 1)
        )
    )
)</formula>
    <label>CI_MALE</label>
    <type>Text</type>
</CustomField>