force-app/main/default/objects/ANZARD_Data__c/fields/CI_UNEX__c.field-meta.xml
<CustomField>
    <fullName>CI_UNEX__c</fullName>
    <formula>IF(
    PARENT_SEX__c = &quot;2&quot; || PARENT_SEX__c = &quot;3&quot;,
    NULL,
    IF(
        PARENT_SEX__c = &quot;1&quot; &amp;&amp; CYCLE_TYPE__c = &quot;8&quot;,
        NULL,
        IF(
            CI_TUBE__c = &quot;Y&quot; || CI_ENDO__c = &quot;Y&quot; || CI_OTH__c = &quot;Y&quot; || CI_MALE__c = &quot;Y&quot;,
            &quot;n&quot;,
            IF(
                ART_REASON__c = &quot;Y&quot;,
                &quot;n&quot;,
                &quot;y&quot;
            )
        )
    )
)</formula>
    <label>CI_UNEX</label>
    <type>Text</type>
</CustomField>