force-app/main/default/objects/ANZARD_Data__c/fields/COMMENT__c.field-meta.xml
<CustomField>
    <fullName>COMMENT__c</fullName>
    <formula>CYCLE_ID__r.COMMENT__c</formula>
    <label>COMMENT</label>
    <type>Text</type>
</CustomField>