force-app/main/default/objects/ANZARD_Data__c/fields/CS__c.field-meta.xml
<CustomField>
    <fullName>CS__c</fullName>
    <formula>LEFT(TEXT(CYCLE_ID__r.CS__c),1)</formula>
    <label>CS</label>
    <type>Text</type>
</CustomField>