force-app/main/default/objects/ANZARD_Data__c/fields/CYC_DATE__c.field-meta.xml
<CustomField>
    <fullName>CYC_DATE__c</fullName>
    <formula>CYCLE_ID__r.Day_1__c</formula>
    <label>CYC_DATE</label>
    <type>Date</type>
</CustomField>