force-app/main/default/objects/ANZARD_Data__c/fields/Cycle_ID_Form__c.field-meta.xml
<CustomField>
    <fullName>Cycle_ID_Form__c</fullName>
    <formula>CYCLE_ID__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle_ID</label>
    <type>Text</type>
</CustomField>