force-app/main/default/objects/ANZARD_Data__c/fields/CYCLE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CYCLE_TYPE__c</fullName>
    <formula>LEFT( TEXT(CYCLE_ID__r.CYCLE_TYPE_c__c) ,1)</formula>
    <label>CYCLE_TYPE</label>
    <type>Text</type>
</CustomField>