force-app/main/default/objects/ANZARD_Data__c/fields/DATE_TTC__c.field-meta.xml
<CustomField>
    <fullName>DATE_TTC__c</fullName>
    <formula>IF(
    PARENT_SEX__c = &quot;1&quot; &amp;&amp; ART_REASON__c = &quot;n&quot;||ART_REASON__c = &quot;N&quot;,
    IF(
        ISBLANK(CYCLE_ID__r.Contact.Date_Started_Trying_to_Conceive__c),
        DATE(1900, 1, 1),
        DATE(YEAR(CYCLE_ID__r.Contact.Date_Started_Trying_to_Conceive__c), MONTH(CYCLE_ID__r.Contact.Date_Started_Trying_to_Conceive__c), 1)
    ),
    NULL
)</formula>
    <label>DATE_TTC</label>
    <type>Date</type>
</CustomField>