force-app/main/default/objects/ANZARD_Data__c/fields/DON_AGE__c.field-meta.xml
<CustomField>
    <fullName>DON_AGE__c</fullName>
    <formula>IF(
    ISBLANK(CYCLE_ID__r.DON_AGE__c) &amp;&amp; (CYCLE_TYPE__c = &quot;2&quot; || CYCLE_TYPE__c = &quot;3&quot; || CYCLE_TYPE__c = &quot;4&quot; || CYCLE_TYPE__c = &quot;5&quot;),
    99,
    IF(
        CYCLE_TYPE__c = &quot;2&quot; || CYCLE_TYPE__c = &quot;3&quot; || CYCLE_TYPE__c = &quot;4&quot; || CYCLE_TYPE__c = &quot;5&quot; || CYCLE_TYPE__c = &quot;8&quot;,
        CYCLE_ID__r.DON_AGE__c,
        NULL
    )
)</formula>
    <label>DON_AGE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>