force-app/main/default/objects/ANZARD_Data__c/fields/EMB_ICSI__c.field-meta.xml
<CustomField>
    <fullName>EMB_ICSI__c</fullName>
    <formula>IF( CYCLE_TYPE__c = &quot;8&quot;,NULL,LEFT( TEXT(CYCLE_ID__r.EMB_ICSI__c) ,1))</formula>
    <label>EMB_ICSI</label>
    <type>Text</type>
</CustomField>