force-app/main/default/objects/ANZARD_Data__c/fields/ET_DATE__c.field-meta.xml
<CustomField>
    <fullName>ET_DATE__c</fullName>
    <formula>CYCLE_ID__r.ET_DATE__c</formula>
    <label>ET_DATE</label>
    <type>Date</type>
</CustomField>