force-app/main/default/objects/ANZARD_Data__c/fields/FDAT_EMB__c.field-meta.xml
<CustomField>
    <fullName>FDAT_EMB__c</fullName>
    <formula>IF( N_S_CLTH__c &gt;0||  N_V_CLTH__c &gt;0|| N_S_BLTH__c &gt;0|| N_V_BLTH__c &gt;0, CYCLE_ID__r.FDAT_EMB__c ,NULL)</formula>
    <label>FDAT_EMB</label>
    <type>Date</type>
</CustomField>