force-app/main/default/objects/ANZARD_Data__c/fields/FDOB_NON_PAT__c.field-meta.xml
<CustomField>
    <fullName>FDOB_NON_PAT__c</fullName>
    <formula>IF( TEXT(CYCLE_ID__r.Contact.Partner__r.Sex_at_Birth__c) = &quot;Female&quot;,CYCLE_ID__r.Contact.Partner__r.Birthdate,NULL)</formula>
    <label>FDOB_NON_PAT</label>
    <type>Date</type>
</CustomField>