force-app/main/default/objects/ANZARD_Data__c/fields/FDOB_PAT__c.field-meta.xml
<CustomField>
    <fullName>FDOB_PAT__c</fullName>
    <formula>CYCLE_ID__r.Contact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FDOB_PAT</label>
    <type>Date</type>
</CustomField>