force-app/main/default/objects/ANZARD_Data__c/fields/FERT_PRES__c.field-meta.xml
<CustomField>
    <fullName>FERT_PRES__c</fullName>
    <formula>IF(
    NOT(ISBLANK(IUI_DATE__c)),
    &quot;1&quot;,
    IF(
        CYCLE_TYPE__c = &quot;8&quot;,
        NULL,
        LEFT(TEXT(CYCLE_ID__r.FERT_PRES__c), 1)
    )
)</formula>
    <label>FERT_PRES</label>
    <type>Text</type>
</CustomField>