force-app/main/default/objects/ANZARD_Data__c/fields/FNAM_SUR2__c.field-meta.xml
<CustomField>
    <fullName>FNAM_SUR2__c</fullName>
    <formula>IF(
    CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz&quot;, LEFT(CYCLE_ID__r.Contact.LastName, 1)),
    LEFT(CYCLE_ID__r.Contact.LastName, 1),
    MID(CYCLE_ID__r.Contact.LastName, 2, 1)
)
&amp;
IF(
    CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz&quot;, MID(CYCLE_ID__r.Contact.LastName, 2, 1)),
    MID(CYCLE_ID__r.Contact.LastName, 2, 1),
    MID(CYCLE_ID__r.Contact.LastName, 3, 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FNAM_SUR2</label>
    <type>Text</type>
</CustomField>