force-app/main/default/objects/ANZARD_Data__c/fields/FP_TYPE__c.field-meta.xml
<CustomField>
    <fullName>FP_TYPE__c</fullName>
    <formula>IF (TEXT(CYCLE_ID__r.Egg_Freeze_Type__c) = &quot;&quot;, LEFT( TEXT( CYCLE_ID__r.FP_TYPE__c  ) ,1), IF (TEXT(CYCLE_ID__r.Egg_Freeze_Type__c) = &quot;Social Egg Freeze&quot;,&quot;3&quot;, &quot;2&quot;))</formula>
    <label>FP_TYPE</label>
    <type>Text</type>
</CustomField>