force-app/main/default/objects/ANZARD_Data__c/fields/HEIGHT_F__c.field-meta.xml
<CustomField>
    <fullName>HEIGHT_F__c</fullName>
    <formula>IF(ISBLANK(CYCLE_ID__r.Contact.Height__c) || CYCLE_ID__r.Contact.Height__c = 0, 999,
    IF(CYCLE_TYPE__c = &quot;8&quot;, NULL, CYCLE_ID__r.Contact.Height__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HEIGHT_F</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>