force-app/main/default/objects/ANZARD_Data__c/fields/IUI_DATE__c.field-meta.xml
<CustomField>
    <fullName>IUI_DATE__c</fullName>
    <formula>IF( CYCLE_ID__r.RecordType.Name = &quot;IUI Cycle&quot;&amp;&amp; SP_SOURCE__c =&quot;2&quot;, CYCLE_ID__r.Date_of_IUI__c ,NULL)</formula>
    <label>IUI_DATE</label>
    <type>Date</type>
</CustomField>