force-app/main/default/objects/ANZARD_Data__c/fields/IVM__c.field-meta.xml
<CustomField>
    <fullName>IVM__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>IVM</label>
    <length>1</length>
    <type>Text</type>
</CustomField>