force-app/main/default/objects/ANZARD_Data__c/fields/MAT_COMP__c.field-meta.xml
<CustomField>
    <fullName>MAT_COMP__c</fullName>
    <formula>CYCLE_ID__r.MAT_COMP__c</formula>
    <label>MAT_COMP</label>
    <type>Text</type>
</CustomField>