force-app/main/default/objects/ANZARD_Data__c/fields/MDOB_1__c.field-meta.xml
<CustomField>
    <fullName>MDOB_1__c</fullName>
    <formula>IF( TEXT(CYCLE_ID__r.Contact.Partner__r.Sex_at_Birth__c) = &quot;Male&quot;,CYCLE_ID__r.Contact.Partner__r.Birthdate,NULL)</formula>
    <label>MDOB_1</label>
    <type>Date</type>
</CustomField>