force-app/main/default/objects/ANZARD_Data__c/fields/MDOB_2__c.field-meta.xml
<CustomField>
    <fullName>MDOB_2__c</fullName>
    <label>MDOB_2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>