force-app/main/default/objects/ANZARD_Data__c/fields/MNAM_FST2__c.field-meta.xml
<CustomField>
    <fullName>MNAM_FST2__c</fullName>
    <formula>IF( TEXT(CYCLE_ID__r.Contact.Partner__r.Sex_at_Birth__c) = &quot;Male&quot;,LEFT(CYCLE_ID__r.Contact.Partner__r.FirstName,2),&quot;&quot;)</formula>
    <label>MNAM_FST2</label>
    <type>Text</type>
</CustomField>