force-app/main/default/objects/ANZARD_Data__c/fields/MNAM_SUR2__c.field-meta.xml
<CustomField>
    <fullName>MNAM_SUR2__c</fullName>
    <formula>IF(
    TEXT(CYCLE_ID__r.Contact.Partner__r.Sex_at_Birth__c) = &quot;Male&quot;,
    (
        IF(
            CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz&quot;, LEFT(CYCLE_ID__r.Contact.Partner__r.LastName, 1)),
            LEFT(CYCLE_ID__r.Contact.Partner__r.LastName, 1),
            MID(CYCLE_ID__r.Contact.Partner__r.LastName, 2, 1)
        )
        &amp;
        IF(
            CONTAINS(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz&quot;, MID(CYCLE_ID__r.Contact.Partner__r.LastName, 2, 1)),
            MID(CYCLE_ID__r.Contact.Partner__r.LastName, 2, 1),
            MID(CYCLE_ID__r.Contact.Partner__r.LastName, 3, 1)
        )
    ),
    &quot;&quot;
)</formula>
    <label>MNAM_SUR2</label>
    <type>Text</type>
</CustomField>