force-app/main/default/objects/ANZARD_Data__c/fields/MORB_ADM__c.field-meta.xml
<CustomField>
    <fullName>MORB_ADM__c</fullName>
    <formula>IF( TEXT(CYCLE_ID__r.MORB_ADM__c) = NULL, &quot;n&quot;, LEFT(TEXT( CYCLE_ID__r.MORB_ADM__c),1))</formula>
    <label>MORB_ADM</label>
    <type>Text</type>
</CustomField>