force-app/main/default/objects/ANZARD_Data__c/fields/MORB_INF__c.field-meta.xml
<CustomField>
    <fullName>MORB_INF__c</fullName>
    <formula>CYCLE_ID__r.MORB_INF__c</formula>
    <label>MORB_INF</label>
    <type>Text</type>
</CustomField>