force-app/main/default/objects/ANZARD_Data__c/fields/MRB_OHSS__c.field-meta.xml
<CustomField>
    <fullName>MRB_OHSS__c</fullName>
    <formula>IF( TEXT(CYCLE_ID__r.MRB_OHSS__c) = NULL, &quot;n&quot;, LEFT(TEXT(CYCLE_ID__r.MRB_OHSS__c),1))</formula>
    <label>MRB_OHSS</label>
    <type>Text</type>
</CustomField>