force-app/main/default/objects/ANZARD_Data__c/fields/N_BLFZ_V__c.field-meta.xml
<CustomField>
    <fullName>N_BLFZ_V__c</fullName>
    <formula>IF( N_EMBDON_FRESH__c &gt;0,0, 
IF( CYCLE_ID__r.N_BLFZ_V__c  &lt;&gt; NULL, CYCLE_ID__r.N_BLFZ_V__c,
CYCLE_ID__r.Total_Embryos_Frozen__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_BLFZ_V</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>