force-app/main/default/objects/ANZARD_Data__c/fields/N_CLFZ_V__c.field-meta.xml
<CustomField>
    <fullName>N_CLFZ_V__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>N_CLFZ_V</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>