force-app/main/default/objects/ANZARD_Data__c/fields/N_DELIV__c.field-meta.xml
<CustomField>
    <fullName>N_DELIV__c</fullName>
    <formula>CYCLE_ID__r.N_DELIV__c</formula>
    <label>N_DELIV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>