force-app/main/default/objects/ANZARD_Data__c/fields/N_EGFZ_S__c.field-meta.xml
<CustomField>
    <fullName>N_EGFZ_S__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>N_EGFZ_S</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>