force-app/main/default/objects/ANZARD_Data__c/fields/N_EGFZ_V__c.field-meta.xml
<CustomField>
    <fullName>N_EGFZ_V__c</fullName>
    <formula>CYCLE_ID__r.Total_Number_of_Eggs_Frozen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_EGFZ_V</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>