force-app/main/default/objects/ANZARD_Data__c/fields/N_EGGDON_FRESH__c.field-meta.xml
<CustomField>
    <fullName>N_EGGDON_FRESH__c</fullName>
    <formula>IF( CYCLE_TYPE__c = &quot;3&quot;|| CYCLE_ID__r.RecordType.Name = &quot;Fresh Egg Donor Cycle&quot;,  CYCLE_ID__r.N_EGGDON_FRESH__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_EGGDON_FRESH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>