force-app/main/default/objects/ANZARD_Data__c/fields/N_EGGS__c.field-meta.xml
<CustomField>
    <fullName>N_EGGS__c</fullName>
    <formula>CYCLE_ID__r.Eggs_Collected_In_Cycle__c</formula>
    <label>N_EGGS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>