force-app/main/default/objects/ANZARD_Data__c/fields/N_EMBDON_FRESH__c.field-meta.xml
<CustomField>
    <fullName>N_EMBDON_FRESH__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_EMBDON_FRESH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>