force-app/main/default/objects/ANZARD_Data__c/fields/N_EMBREC_FRESH__c.field-meta.xml
<CustomField>
    <fullName>N_EMBREC_FRESH__c</fullName>
    <formula>IF ( CYCLE_TYPE__c = &quot;5&quot;||CYCLE_TYPE__c = &quot;7&quot;,  CYCLE_ID__r.N_EMBREC_FRESH__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_EMBREC_FRESH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>