force-app/main/default/objects/ANZARD_Data__c/fields/N_FH__c.field-meta.xml
<CustomField>
    <fullName>N_FH__c</fullName>
    <formula>CYCLE_ID__r.N_FH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_FH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>