force-app/main/default/objects/ANZARD_Data__c/fields/N_ICSI__c.field-meta.xml
<CustomField>
    <fullName>N_ICSI__c</fullName>
    <formula>CYCLE_ID__r.N_ICSI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_ICSI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>