force-app/main/default/objects/ANZARD_Data__c/fields/N_PGT_ASSAY__c.field-meta.xml
<CustomField>
    <fullName>N_PGT_ASSAY__c</fullName>
    <formula>CYCLE_ID__r.NPGT_ASSAY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_PGT_ASSAY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>