force-app/main/default/objects/ANZARD_Data__c/fields/N_S_BLTH__c.field-meta.xml
<CustomField>
    <fullName>N_S_BLTH__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>N_S_BLTH</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>