force-app/main/default/objects/ANZARD_Data__c/fields/N_V_CLTH__c.field-meta.xml
<CustomField>
    <fullName>N_V_CLTH__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>N_V_CLTH</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>