force-app/main/default/objects/ANZARD_Data__c/fields/NI_PGT_ASSAY__c.field-meta.xml
<CustomField>
    <fullName>NI_PGT_ASSAY__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>NI_PGT_ASSAY</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>