force-app/main/default/objects/ANZARD_Data__c/fields/NI_PGT_ET__c.field-meta.xml
<CustomField>
    <fullName>NI_PGT_ET__c</fullName>
    <formula>CYCLE_ID__r.Total_Number_of_Emb_Transfered_NI_PGT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NI_PGT_ET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>