force-app/main/default/objects/ANZARD_Data__c/fields/OPU_Date__c.field-meta.xml
<CustomField>
    <fullName>OPU_Date__c</fullName>
    <formula>DATEVALUE( CYCLE_ID__r.OPU_Date_Formula__c )</formula>
    <label>OPU_Date</label>
    <type>Date</type>
</CustomField>