force-app/main/default/objects/ANZARD_Data__c/fields/PARENT_SEX__c.field-meta.xml
<CustomField>
    <fullName>PARENT_SEX__c</fullName>
    <formula>LEFT( TEXT(CYCLE_ID__r.PARENT_SEX__c) ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PARENT_SEX</label>
    <type>Text</type>
</CustomField>